# LinearSplit

./: LinearSplit.cabal  README  Splitter.hs
Data/: LinearSplit.hs
Utils/: LinearSplit.hs
cycle/: tagd.cycle  tagg.cycle  tagn.cycle
data/: acids.txt  acids6.txt  bacids1.txt  bacids2.txt  bsplit.sql  racids.txt  rracids.txt  rracids_ssga.txt  rrsplit.sql  rsplit.sql  split.sql  tacids.txt  tranagg_split.sql  tsplit.sql
doc/: draft.txt  predictv2.doc
examples/: GenAccounts.hs  Splitter.hs  test1.txt
sample/: Simple_3_streams.txt
tests/: Properties.hs
